--- a/css/responsive.css
+++ b/css/responsive.css
@@ -279,6 +279,15 @@ Responsive
     *************************************** */
     .contenedor-prizes{width: 70vw; height: 78vh;}
     .contenedor-prizes .img-fluid{width: 100% !important;}
+
+
+    .contenedor-free-bets{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-areas:
+        "b-promocion"
+        "b-datos";
+    }
+
 }
 @media screen and (max-width: 768px) and (min-width: 481px) and (orientation: landscape){
     .introduction, .content,{height: auto;}
