--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ Frecuents Questions
 /* ***************************************
 contrato
 *************************************** */
-.contrato, .newsletter, .how-play, .prizes{
+.contrato, .newsletter, .how-play, .reglas{
     background-color: rgba(0,0,0,0.4);
     height: 100%;
     width: 100%;
@@ -914,6 +914,38 @@ Free bets
     padding: 10px;
     width: 96%;
 }
+
+/* IMG de la promo */
+.img-promo {
+    text-align: center;
+}
+
+.img-promo img{
+    width: 98%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.img-promo p{
+    margin: 0px auto;
+    width: 200px;
+    height: 25px;
+    background-color: rgb(254, 210, 50);
+    color: black;
+    padding-top: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 3px 0px 3px rgb(255, 175, 0);
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    transition: all 100ms;
+}
+
+.img-promo p:hover{cursor: pointer;}
+.img-promo p:active{box-shadow: 0px 2px 0px 1px rgb(255, 175, 0);}
+
+/* Seccion de los datos de los tiros */
 
 .free-bets-datos{
     background-color: rgb(65, 70, 95);
