--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,9 @@ Free bets
     border-radius: 5px;
 }
 
-.img-promo p{
+.img-promo-acostada{display: none;}
+
+#reglas{
     margin: 0px auto;
     width: 200px;
     height: 25px;
@@ -942,8 +944,8 @@ Free bets
     transition: all 100ms;
 }
 
-.img-promo p:hover{cursor: pointer;}
-.img-promo p:active{box-shadow: 0px 2px 0px 1px rgb(255, 175, 0);}
+#reglas:hover{cursor: pointer;}
+#reglas:active{box-shadow: 0px 2px 0px 1px rgb(255, 175, 0);}
 
 /* Seccion de los datos de los tiros */
 
