Add icon at the section contact

--- a/css/style.css
+++ b/css/style.css
@@ -775,6 +775,8 @@ contacto
     text-align: center;
     color: #fff;
 }
+
+.informacion-adicional table{margin: 0px auto;}
 /* ***************************************
 NEWSLETTER
 *************************************** */
