--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@ transparencia
     color: white;
 }
 
-.container-transparencia .img-fluid{width: 530px;}
+.container-transparencia .img-fluid{width: auto;}
 .container-transparencia a{color: white;}
 
 /* ***************************************
@@ -864,6 +864,18 @@ Free bets
     font-family: 'Archivo Black';
 }
 
+.btn-free-bet{
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    width: 150px;
+    font-size: 25px;
+    font-weight: bold;
+    box-shadow: 1px 1px 1px 1px rgb(0,0,0);
+}
+
 /* Slider */
 .contenedor-slider{
     width: 100%;
@@ -890,9 +902,6 @@ Free bets
     font-weight: bold;
     text-shadow: 1px 1px 1px rgba(0,0,0,1);
 }
-
-
-
 
 /*  */
 #reglas{
@@ -1030,3 +1039,8 @@ Free bets
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(255, 210, 50, 0.9);
 }
+
+
+/* ***************************************
+popovers
+*************************************** */
