--- a/css/style.css
+++ b/css/style.css
@@ -903,6 +903,38 @@ Free bets
     text-shadow: 1px 1px 1px rgba(0,0,0,1);
 }
 
+.contenedor-controles{
+    width: 100%;
+    height: auto;
+}
+
+.controls ul{
+    padding: 0px;
+    text-align: center;
+    position: relative;
+    bottom: 1em;
+    margin: 0px;
+    width: 100%;
+    z-index: 50;
+}
+
+.controls li{
+    list-style-type: none;
+    background-color: rgb(242,131,146);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px 1px rgb(0,0,0);
+    margin-right: 15px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.controls li.active{
+    background-color: rgb(9,221,214);
+}
+
+
 /*  */
 #reglas{
     margin: 0px auto;
@@ -1044,3 +1076,57 @@ Free bets
 /* ***************************************
 popovers
 *************************************** */
+.popover__title {
+  font-size: 24px;
+  line-height: 36px;
+  text-decoration: none;
+  color: rgb(228, 68, 68);
+  text-align: center;
+  padding: 15px 0;
+}
+
+.popover__wrapper {
+    position: relative;
+    margin-top: 1.5rem;
+    display: inline-block;
+}
+.popover__content {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    transform: translate(0,10px);
+    background-color: #001335;
+    padding: 5px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    width: auto;
+    left: 25%;
+    text-align: center;
+}
+
+@media only screen and (min-width: 1023px) { .container-introduction .popover__content {left: 0;} }
+@media only screen and (max-width: 480px) { .cuerpo-how-to-play .popover__content {left: 0;} }
+
+.popover__content:before {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    right: calc(50% - 10px);
+    top: -8px;
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent #001335 transparent;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+.popover__wrapper:hover .popover__content {
+    z-index: 10;
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0,-8px);
+    transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
+}
+.popover__message {
+  text-align: center;
+}
+
+.popover__content p{font-size: 15px !important;}
