--- a/css/responsive.css
+++ b/css/responsive.css
@@ -96,6 +96,11 @@ Responsive
     .information{display: none !important;}
     #how-play-modal .contenedor-premios img{width: 49%;}
 
+
+    /* ***************************************
+    Footer
+    *************************************** */
+    .con-btn-news{display: none;}
     /* ***************************************
     Free bets
     *************************************** */
@@ -131,6 +136,7 @@ Responsive
 }
 @media only screen and (max-width: 480px) and (orientation: portrait){
     .img-fluid{width: auto}
+    .contenedor-transparencia .img-fluid{width: 100%;}
     .contenedor-prizes{width: 100%; height: auto;}
     .contenedor-prizes .img-fluid{width: 100% !important;}
     .faqs, .terms, .contact{display: none;}
