--- a/css/style.css
+++ b/css/style.css
@@ -427,9 +427,24 @@ Game
     -webkit-animation: parpadeo 3s 3;
             animation: parpadeo 3s 3;
 }
+
+.contenedor_video{text-align: center;}
+.btn_video{
+    background-color: #ffd200;
+    font-weight: bold;
+    border-radius: 5px;
+    border: none;
+    height: 29px;
+    width: 80%;
+}
 /* ***************************************
 Chat o tabla
 *************************************** */
+.chat{
+    overflow: auto;
+    height: 100%;
+}
+
 .tittle-chat{
     background-color: #f7f6e7;
     border-radius: 5px;
@@ -458,6 +473,12 @@ Chat o tabla
 .activo{
     font-weight: bold;
     color: black !important;
+}
+
+.active_btn{
+    background-color: #fdd432 !important;
+    color: black;
+    font-weight: bold;
 }
 
 #datos{margin-top: 10px;}
