Se corrigio un pequeño bug en el modal que hacia que se visualizara cortado

--- a/css/style.css
+++ b/css/style.css
@@ -737,7 +737,7 @@ contrato
     position: relative;
     background-color: #364155;
     color: white;
-    margin: auto;
+    margin: 0px auto 15px auto;
     padding: 0;
     border: 1px solid #888;
     width: 70%;
