Se cambio el last bet a mayus, btn de video en modal de howtoplay, tabla en how to play de index

--- a/css/style.css
+++ b/css/style.css
@@ -887,6 +887,9 @@ prizes
     width: 80%;
     display: none;
 }
+.all-prizes .representation-trans{
+    width: 100%;
+}
 
 #how-play-modal .contenedor-premios img{width: 25%;}
 #how-play-modal .contenedor-premios{width: 100%; text-align: center;}
