se agrego demo de juego escritorio y movil

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -41,7 +41,7 @@ Responsive
         "bet btn-play";
     }
 
-    .img-machine{
+    .img-machine, .img-machine-juguete{
         background-size: 200px 200px;
         height: 200px;
         width: 200px;
@@ -51,7 +51,7 @@ Responsive
     .contenedor-profit{margin: 0px;}
     .btn-play{width: auto; margin: 0px;}
 
-    #svg{
+    #svg, #svg-juguete-m{
         top: 82px;
         height: 117px;
     }
@@ -96,7 +96,6 @@ Responsive
     .information{display: none !important;}
     #how-play-modal .contenedor-premios img{width: 49%;}
 
-
     /* ***************************************
     Footer
     *************************************** */
@@ -137,6 +136,27 @@ Responsive
     .contenedor_video_div{
         height: auto;
     }
+    /* ***************************************
+    maquina juguete
+    *************************************** */
+    .puntos-totales label, .apuesta-juguete label{
+        position: initial !important;
+        background: transparent;
+        padding: 0px;
+        line-height: 2;
+        cursor: auto;
+        display: initial;
+    }
+
+    .contenedor-Bdatos h3{
+        font-size: 1.5em;
+        margin-top: 20px;
+    }
+
+    .puntos-totales input, .btn-play-juguete input, .apuesta-juguete input{
+        position: initial;
+        opacity: 1;
+    }
 }
 @media only screen and (max-width: 480px) and (orientation: portrait){
     .img-fluid{width: auto}
@@ -149,7 +169,7 @@ Responsive
     .modal{top:15px;}
     .modal-body{font-size: 13px;}
     .modal-content{width: 92%;}
-    #pote{
+    #pote, #pote-juguete-m{
         top: -94px;
         font-size: 1em;
     }
@@ -185,7 +205,7 @@ Responsive
     .tittle-game{height: 25px;}
     .tittle-game h3{padding: 0px;}
 
-    .img-machine{
+    .img-machine, .img-machine-juguete{
         background-size: 200px 200px;
         height: 200px;
         width: 200px;
@@ -193,7 +213,7 @@ Responsive
 
     .btn-play{width: auto;}
 
-    #svg{
+    #svg, #svg-juguete-m{
         top: 82px;
         height: 117px;
     }
