--- a/css/style.css
+++ b/css/style.css
@@ -1352,6 +1352,18 @@ Contenedor de dic con video
     transition: all 500ms;
 }
 
+@keyframes sombra-g {
+    from{box-shadow: 2px 2px 1px 2px rgba(255, 1, 1, 0.75);}
+    25%{box-shadow: 2px 2px 1px 2px rgba(255, 247, 1, 0.75);}
+    50%{box-shadow: 2px 2px 1px 2px rgba(75, 255, 1, 0.75);}
+    75%{box-shadow: 2px 2px 1px 2px rgba(1, 161, 255, 0.75);}
+    to{box-shadow: 2px 2px 1px 2px rgba(255, 1, 1, 0.75);}
+}
+
+.sombras-c-g{
+    animation: sombra-g 3s infinite;
+    transition: all 500ms;
+}
 
 .free-bets-datos h2{
     margin: 0px;
