--- a/css/style.css
+++ b/css/style.css
@@ -1153,7 +1153,7 @@ Free bets
 .contenedor-Bdatos .con-table{text-align: center;}
 .contenedor-player-bets{
     width: 100%;
-    text-align: center;Nunito
+    text-align: center;
     background-color: #001335;
     box-shadow: 1px 1px 5px 1px rgba(0, 0, 0,0.5);
     margin-bottom: 10px;
