Se arreglo el demo en version movil y otros detalles dentro de la pag

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -159,7 +159,11 @@ Responsive
     }
 }
 @media only screen and (max-width: 480px) and (orientation: portrait){
+    /* Navegacion */
+    .container-navigation{display: block;}
+    .logo{text-align: center;}
     .img-fluid{width: auto}
+    
     .contenedor-transparencia .img-fluid{width: 100%;}
     .contenedor-prizes{width: 100%; height: auto;}
     .contenedor-prizes .img-fluid{width: 100% !important;}
